rename mbox file

--- a/1_mbox_reader.ipynb
+++ b/1_mbox_reader.ipynb
@@ -57,7 +57,7 @@
    ],
    "source": [
     "%%time\n",
-    "mbox = mailbox.mbox('data/gmail.mbox')"
+    "mbox = mailbox.mbox('data/all_messages.mbox')"
    ]
   },
   {
